<resources>
    <string name="app_name">andmenu</string>
    <string name="app_source_code_url" translatable="false">https://github.com/cankurttekin/andmenu</string>
    <string name="preferences_item_about_this_app_github_repo">andmenu on GitHub</string>
    <string name="preferences_item_about_this_app_github_repo_summary">Access https://github.com/cankurttekin/andmenu</string>
    <string name="displayedFullVersionString">Version %1$s</string>
    <string name="loading_main_caption">Refreshing database&#8230;</string>
    <string name="loading_detail_for_command_search">On first launch, or on first launch after changing language setting,\nrefreshing may take a while (sometimes tens of seconds).</string>
    <string name="calculator_precision_format">Calculation Precision: %1$s</string>
    <string name="calculator_precision_no_error">No Error</string>
    <string name="calculator_precision_rounding">Half rounding up while calculation</string>
    <string name="calculator_error_division_by_zero">Division by 0</string>
    <string name="calculator_error_unit_conversion_failure">Cannot convert \"%1$s\" to \"%2$s\"</string>
    <string name="result_search_query_on_engine_format">Search \"%1$s\" on %2$s</string>
    <string name="result_static_webpage_format">Access %1$s</string>
    <string name="result_config_summary">Preferences for andmenu</string>
    <string name="theme_name_dmenu">dmenu (Light or Dark, according to system setting)</string>
    <string name="theme_name_dmenu_light">dmenu Light</string>
    <string name="theme_name_dmenu_dark">dmenu Dark</string>
    <string name="theme_name_default">Blue Line Console (Light or Dark, according to system setting)</string>
    <string name="theme_name_light">Blue Line Console Light</string>
    <string name="theme_name_dark">Blue Line Console Dark</string>
    <string name="theme_name_marine">Marine</string>
    <string name="theme_name_old_computer">Old Computer</string>
    <string name="theme_name_gruvbox">Gruvbox</string>
    <string name="theme_name_rosepine">Rose Pine</string>
    <string name="widget_launcher_label">andmenu shortcut</string>
    <string name="string_match_strategy_substring">Normal (Substring)</string>
    <string name="string_match_strategy_skipped_substring">Skipped substring (e.g. \"abd\" for \"abcdef\")</string>
    <string name="string_match_strategy_fuzzy">Fuzzy match</string>
    <string name="notification_launch_this_app">Launch andmenu</string>
    <string name="notification_channel_always_show">Notification icon always shown to launch andmenu everywhere</string>
    <string name="button_add">Add</string>
    <string name="button_update">Update</string>
    <string name="button_delete">Delete</string>
    <string name="button_close">Close</string>
    <string name="button_ok">OK</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_increment_minimal">+</string>
    <string name="button_decrement_minimal">-</string>
    <string name="rgb_color_red">Red</string>
    <string name="rgb_color_green">Green</string>
    <string name="rgb_color_blue">Blue</string>
    <string name="rgb_color_display">RGB (Red:%1$d, Green:%2$d, Blue:%3$d)</string>
    <string name="note_take_effect_after_restart">This setting takes effect after restarting andmenu.</string>
    <string name="preferences_title_for_header_and_footer">Configuration</string>
    <string name="preferences_title_for_header_and_footer_url">URL</string>
    <string name="preferences_title_for_header_and_footer_add_custom_urls">Add URL</string>
    <string name="preferences_title_for_header_and_footer_edit_custom_urls">Edit URL</string>
    <string name="preferences_title_for_header_and_footer_widget_commands">Widget Commands</string>
    <string name="preferences_title_for_header_and_footer_accent_color">Accent Color</string>
    <string name="preferences_title_for_header_home_screen_default_items">Home Screen</string>
    <string name="preferences_title_for_footer_home_screen_default_items">Default Items</string>
    <string name="preferences_title_for_header_and_footer_home_screen_add_widget">Add Widget</string>
    <string name="preferences_title_for_header_and_footer_widget">Widget</string>
    <string name="preferences_title_for_header_and_footer_license">License</string>
    <string name="preferences_category_main">General</string>
    <string name="preferences_category_appearance">Appearance</string>
    <string name="preferences_category_apps">Launching Apps</string>
    <string name="preferences_category_urls">Web Pages and Searches</string>
    <string name="preferences_category_custom_commands">Custom commands</string>
    <string name="preferences_category_home_screen">Home Screen</string>
    <string name="preferences_category_contacts">Contacts</string>
    <string name="preferences_category_advanced">Advanced</string>
    <string name="preferences_category_about_this_app">About</string>
    <string name="preferences_item_main_show_startup_help_title">Show help on startup</string>
    <string name="preferences_item_main_show_startup_help_summary">This option just shows you the guidance for help command. It is better to disable this option once you remembered "help" command.</string>
    <string name="preferences_item_default_assist_app_title">Set as default assistant app</string>
    <string name="preferences_item_default_assist_app_summary">To open andmenu by long-pressing home button everywhere, set it as default assistant app from setting menu.</string>
    <string name="preferences_item_default_home_app_title">Set as default home app</string>
    <string name="preferences_item_default_home_app_summary">To use andmenu as your home screen, set it as default home app from setting menu.</string>
    <string name="preferences_item_main_always_show_notification_title">Always show icon as notification</string>
    <string name="preferences_item_main_always_show_notification_summary">Always show the notification icon to start andmenu everywhere.</string>
    <string name="preferences_item_main_run_mode_title">Run mode</string>
    <string name="preferences_item_main_run_mode_summary">Quick access to settings panels (sys) like WiFi, Bluetooth, etc. from command line.</string>
    <string name="preferences_item_text_match_strategy_title">Text search matching style</string>
    <string name="preferences_item_appearance_theme_title">Theme</string>
    <string name="preferences_item_appearance_show_header_title">Show header text</string>
    <string name="preferences_item_appearance_header_text_title">Header text</string>
    <string name="preferences_item_appearance_placeholder_text_title">Input placeholder text</string>
    <string name="preferences_item_appearance_theme_summary">When this option is changed, andmenu restarts immediately.</string>
    <string name="preferences_item_appearance_accent_color">Accent color</string>
    <string name="preferences_item_appearance_animation_title">Animation</string>
    <string name="preferences_item_appearance_show_icons_title">Show icons</string>
    <string name="preferences_item_apps_show_package_name_title">Show package name</string>
    <string name="preferences_item_apps_show_package_name_summary">Note: You can find apps by a part of package name even this check is off.</string>
    <string name="preferences_item_apps_sort_by_usage_title">Sort by usage frequency</string>
    <string name="preferences_item_apps_sort_by_usage_summary">Display frequently used apps at the top of the search results.</string>
    <string name="preferences_item_display_custom_urls_title">Web pages and searches</string>
    <string name="preferences_item_default_search_title">Default Search Engine</string>
    <string name="preferences_item_default_search_summary">Always show specific search engine on the bottom of list</string>
    <string name="preferences_item_default_search_option_none">(None)</string>
    <string name="preferences_item_custom_commands_widgets">Widget commands</string>
    <string name="preferences_item_home_screen_default_items">Home screen items</string>
    <string name="preferences_item_home_set_solid_color_wallpaper_title">Set solid color as wallpaper</string>
    <string name="preferences_item_home_set_wallpaper_title">Set wallpaper</string>
    <string name="preferences_item_home_hide_status_bar_title">Hide status bar</string>
    <string name="preferences_item_home_hide_status_bar_summary">Hide the status bar when andmenu is used as the home screen.</string>
    <string name="preferences_item_home_screen_default_items_summary">Display results and widgets when nothing is input at home screen, when andmenu is set to home app.</string>
    <string name="preferences_item_contacts_enable_search">Enable contacts search</string>
    <string name="preferences_item_contacts_search_permission_explanation">Enabling contacts search requires permission to read Contacts. You may be asked to grant the access to Contacts.</string>
    <string name="preferences_item_advanced_main_edittext_hint_locale_english_title">Notify English input to keyboard input software on command input window</string>
    <string name="preferences_item_advanced_main_edittext_hint_locale_english_summary">Command input window uses setImeHintLocales and sets to English locale. Behavior differs between keyboard input softwares.</string>
    <string name="preferences_item_advanced_main_edittext_flagforceascii_title">Set IME_FLAG_FORCE_ASCII flag on command input window</string>
    <string name="preferences_item_advanced_main_edittext_flagforceascii_summary">IME_FLAG_FORCE_ASCII is intended to use ASCII characters for input. Behavior differs between keyboard input softwares.</string>
    <string name="preferences_item_accept_arbitrary_url">Accept arbitrary scheme for URL</string>
    <string name="preferences_item_accept_arbitrary_url_summary">By default, andmenu accepts only URL starting with http:// and https:// as URL input. By enabling option, other schemes are also accepted as URL input.</string>
    <string name="preferences_item_about_this_app_licensing_information">License information</string>
    <string name="preferences_url_add_button">Add custom URL or search engine</string>
    <string name="preferences_url_column_command_name">Command name</string>
    <string name="preferences_url_column_display_name">Display name</string>
    <string name="preferences_url_column_url">URL</string>
    <string name="preferences_url_column_has_query">Search engine (query is added at the end when enabled)</string>
    <string name="preferences_url_property_enabled">Enabled</string>
    <string name="preferences_url_property_disabled">Disabled</string>
    <string name="preferences_url_property_preset">Preset</string>
    <string name="preferences_url_varies_with_locale">Varies with device language setting</string>
    <string name="preferences_accent_color_theme_default">Theme default</string>
    <string name="preferences_accent_color_custom">Customize color</string>
    <string name="preferences_accent_color_theme_without_accent_color">Current theme (%1$s) does not support changing accent color.</string>
    <string name="preferences_home_screen_add_command_button">Add command</string>
    <string name="preferences_home_screen_add_widget_button">Add widget</string>
    <string name="preferences_home_screen_add_widget_select_message">Select widget to add:</string>
    <string name="preferences_home_screen_widget_label">Widget</string>
    <string name="preferences_home_screen_command_label">Command</string>
    <string name="preferences_widget_height_px">Height (px)</string>
    <string name="preferences_widget_minimum_height_show">Minimum Height: %1$d px</string>
    <string name="preferences_widget_default_height_show">Default Height: %1$d px</string>
    <string name="preferences_widget_configure_the_widget">Configure the widget</string>
</resources>