<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <PreferenceCategory
        android:title="@string/preferences_category_main"
        app:iconSpaceReserved="false"
        >
        <SwitchPreference
            android:key="pref_main_show_startup_help"
            android:title="@string/preferences_item_main_show_startup_help_title"
            android:summary="@string/preferences_item_main_show_startup_help_summary"
            android:defaultValue="true"
            app:iconSpaceReserved="false"
            />
        <Preference
            android:key="pref_default_assist_app"
            android:title="@string/preferences_item_default_assist_app_title"
            android:summary="@string/preferences_item_default_assist_app_summary"
            app:iconSpaceReserved="false"
            >
        </Preference>
        <Preference
            android:key="pref_default_home_app"
            android:title="@string/preferences_item_default_home_app_title"
            android:summary="@string/preferences_item_default_home_app_summary"
            app:iconSpaceReserved="false"
            />
        <SwitchPreference
            android:key="pref_main_always_show_notification"
            android:title="@string/preferences_item_main_always_show_notification_title"
            android:summary="@string/preferences_item_main_always_show_notification_summary"
            android:defaultValue="false"
            app:iconSpaceReserved="false"
            />
        <SwitchPreference
            android:key="pref_main_run_mode"
            android:title="@string/preferences_item_main_run_mode_title"
            android:summary="@string/preferences_item_main_run_mode_summary"
            android:defaultValue="false"
            app:iconSpaceReserved="false"
            />
        <ListPreference
            android:key="pref_text_match_strategy"
            android:title="@string/preferences_item_text_match_strategy_title"
            android:defaultValue="substring"
            app:iconSpaceReserved="false"
            />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/preferences_category_appearance"
        app:iconSpaceReserved="false"
        >
        <SwitchPreference
            android:key="pref_appearance_show_header"
            android:defaultValue="true"
            android:title="@string/preferences_item_appearance_show_header_title"
            app:iconSpaceReserved="false"
            />
        <EditTextPreference
            android:key="pref_appearance_header_text"
            android:defaultValue="@string/app_name"
            android:title="@string/preferences_item_appearance_header_text_title"
            android:dependency="pref_appearance_show_header"
            app:iconSpaceReserved="false"
            />
        <EditTextPreference
            android:key="pref_mainedittext_placeholder"
            android:defaultValue=""
            android:title="@string/preferences_item_appearance_placeholder_text_title"
            app:iconSpaceReserved="false"
            />
        <ListPreference
            android:key="pref_appearance_theme"
            android:defaultValue="dmenu"
            android:title="@string/preferences_item_appearance_theme_title"
            android:summary="@string/preferences_item_appearance_theme_summary"
            app:iconSpaceReserved="false"
            />
        <Preference
            android:title="@string/preferences_item_appearance_accent_color"
            app:iconSpaceReserved="false"
            >
            <intent
                android:targetClass="com.cankurttekin.andmenu.applicationMain.PreferencesAccentColorActivity"
                android:targetPackage="com.cankurttekin.andmenu"
                />
        </Preference>
        <SwitchPreference
            android:key="pref_appearance_animation"
            android:defaultValue="true"
            android:title="@string/preferences_item_appearance_animation_title"
            app:iconSpaceReserved="false"
            />
        <SwitchPreference
            android:key="pref_appearance_show_icons"
            android:defaultValue="true"
            android:title="@string/preferences_item_appearance_show_icons_title"
            app:iconSpaceReserved="false"
            />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/preferences_category_apps"
        app:iconSpaceReserved="false"
        >
        <SwitchPreference
            android:key="pref_apps_sort_by_usage"
            android:title="@string/preferences_item_apps_sort_by_usage_title"
            android:summary="@string/preferences_item_apps_sort_by_usage_summary"
            android:defaultValue="false"
            app:iconSpaceReserved="false"
            />
        <SwitchPreference
            android:key="pref_apps_show_package_name"
            android:title="@string/preferences_item_apps_show_package_name_title"
            android:summary="@string/preferences_item_apps_show_package_name_summary"
            android:defaultValue="false"
            app:iconSpaceReserved="false"
            />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/preferences_category_urls"
        app:iconSpaceReserved="false"
        >
        <Preference
            android:title="@string/preferences_item_display_custom_urls_title"
            app:iconSpaceReserved="false"
            >
            <intent
                android:targetClass="com.cankurttekin.andmenu.applicationMain.PreferencesCustomWebActivity"
                android:targetPackage="com.cankurttekin.andmenu"
                />
        </Preference>
        <ListPreference
            android:key="pref_default_search"
            android:defaultValue="none"
            android:title="@string/preferences_item_default_search_title"
            android:summary="@string/preferences_item_default_search_summary"
            app:iconSpaceReserved="false"
            />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/preferences_category_custom_commands"
        app:iconSpaceReserved="false"
        >
        <Preference
            android:title="@string/preferences_item_custom_commands_widgets"
            app:iconSpaceReserved="false"
            >
            <intent
                android:targetClass="com.cankurttekin.andmenu.applicationMain.PreferencesWidgetCommandsActivity"
                android:targetPackage="com.cankurttekin.andmenu"
                />
        </Preference>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/preferences_category_home_screen"
        app:iconSpaceReserved="false"
        >
        <Preference
            android:key="pref_home_set_solid_color_wallpaper"
            android:title="@string/preferences_item_home_set_solid_color_wallpaper_title"
            app:iconSpaceReserved="false"
            />
        <Preference
            android:key="pref_home_set_wallpaper"
            android:title="@string/preferences_item_home_set_wallpaper_title"
            app:iconSpaceReserved="false"
            />
        <SwitchPreference
            android:key="pref_home_hide_status_bar"
            android:title="@string/preferences_item_home_hide_status_bar_title"
            android:summary="@string/preferences_item_home_hide_status_bar_summary"
            android:defaultValue="false"
            app:iconSpaceReserved="false"
            />
        <Preference
            android:title="@string/preferences_item_home_screen_default_items"
            android:summary="@string/preferences_item_home_screen_default_items_summary"
            app:iconSpaceReserved="false"
            >
            <intent
                android:targetClass="com.cankurttekin.andmenu.applicationMain.PreferencesHomeScreenItemsActivity"
                android:targetPackage="com.cankurttekin.andmenu"
                />
        </Preference>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/preferences_category_contacts"
        app:iconSpaceReserved="false"
        >
        <SwitchPreference
            android:key="pref_contact_search_enabled"
            android:title="@string/preferences_item_contacts_enable_search"
            android:summary="@string/preferences_item_contacts_search_permission_explanation"
            android:defaultValue="false"
            app:iconSpaceReserved="false"
            />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/preferences_category_advanced"
        app:iconSpaceReserved="false"
        >
        <SwitchPreference
            android:key="pref_mainedittext_hint_locale_english"
            android:title="@string/preferences_item_advanced_main_edittext_hint_locale_english_title"
            android:summary="@string/preferences_item_advanced_main_edittext_hint_locale_english_summary"
            android:defaultValue="false"
            app:iconSpaceReserved="false"
            />
        <SwitchPreference
            android:key="pref_mainedittext_flagforceascii"
            android:title="@string/preferences_item_advanced_main_edittext_flagforceascii_title"
            android:summary="@string/preferences_item_advanced_main_edittext_flagforceascii_summary"
            android:defaultValue="false"
            app:iconSpaceReserved="false"
            />
        <SwitchPreference
            android:key="pref_url_arbitrary_scheme"
            android:title="@string/preferences_item_accept_arbitrary_url"
            android:summary="@string/preferences_item_accept_arbitrary_url_summary"
            android:defaultValue="false"
            app:iconSpaceReserved="false"
            />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/preferences_category_about_this_app"
        app:iconSpaceReserved="false"
        >
        <Preference
            android:key="dummy_pref_app_info"
            android:title="@string/app_name"
            android:icon="@mipmap/ic_launcher"
            app:iconSpaceReserved="false"
            />
        <Preference
            android:title="@string/preferences_item_about_this_app_github_repo"
            android:summary="@string/preferences_item_about_this_app_github_repo_summary"
            app:iconSpaceReserved="false"
            >
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/app_source_code_url"
                />
        </Preference>
        <Preference
            android:title="@string/preferences_item_about_this_app_licensing_information"
            app:iconSpaceReserved="false"
            >
            <intent
                android:targetClass="com.cankurttekin.andmenu.applicationMain.LicensingInformationActivity"
                android:targetPackage="com.cankurttekin.andmenu"
                />
        </Preference>
    </PreferenceCategory>
</PreferenceScreen>
